@@ -70,7 +70,7 @@
 
                                         <div class="mc-message"></div>
                                         <input type="hidden" name="moreinfo" value="" />
-                                        <button type="submit" class="btn btn-box btn-flat btn-main-theme pull-right">{#pn_contact_send#|ucfirst}</button>
+                                        <button type="submit" id="btn-contact" class="btn btn-box btn-flat btn-main-theme pull-right">{#pn_contact_send#|ucfirst}</button>
                                     </form>
                                 </div>
                             </div>
